--- a/ConsoleApplication1.vcxproj
+++ b/ConsoleApplication1.vcxproj
@@ -130,11 +130,13 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="LinearAllocator.cpp" />
+    <ClCompile Include="PoolAllocator.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h" />
     <ClInclude Include="IAllocator.h" />
     <ClInclude Include="LinearAllocator.h" />
+    <ClInclude Include="PoolAllocator.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
